test/trivial/shannon/readWriteEnum.good
Tuesday
readWriteEnum.chpl:1: error: halt reached - ***Error: Not of week type***
